khedmet zied projet

--- a/GMI-angular/src/app/common/sidebar/sidebar.component.html
+++ b/GMI-angular/src/app/common/sidebar/sidebar.component.html
@@ -96,7 +96,7 @@
                             account_circle
                         </i>
                         <span class="title leading-none">
-                            Materiel Manquant
+                            Gestion Materiel Manquant
                         </span>
                     </a>
                 </div>
