--- a/GMI-angular/src/app/dashboard/gestion-user/gestion-user.component.html
+++ b/GMI-angular/src/app/dashboard/gestion-user/gestion-user.component.html
@@ -54,7 +54,7 @@
       </thead>
 
       <tbody class="text-black dark:text-white">
-        <tr *ngFor="let u of userData ">
+        <tr *ngFor="let u of filteredUsers ">
           <td
             class="ltr:text-left rtl:text-right whitespace-nowrap px-[20px] py-[15px] md:ltr:first:pl-[25px] md:rtl:first:pr-[25px] ltr:first:pr-0 rtl:first:pl-0 border-b border-gray-100 dark:border-[#172036]">
             <span class="text-gray-500 dark:text-gray-400">
