--- a/GMI-angular/src/app/dashboard/gmi/distribution-materiels/distribution-materiels.component.html
+++ b/GMI-angular/src/app/dashboard/gmi/distribution-materiels/distribution-materiels.component.html
@@ -1,12 +1,23 @@
-<div class="bg-white dark:bg-gray-800 rounded-lg shadow p-4">
-  <h2 class="text-lg font-semibold text-gray-700 dark:text-gray-200 mb-4">Distribution des Matériels</h2>
-  <apx-chart
-    [series]="chartOptions.series"
-    [chart]="chartOptions.chart"
-    [labels]="chartOptions.labels"
-    [title]="chartOptions.title"
-    [theme]="chartOptions.theme"
-    [legend]="chartOptions.legend"
-    [plotOptions]="chartOptions.plotOptions">
-  </apx-chart>
-</div> 
+  <div>
+    <h3 class="text-xl font-semibold text-black dark:text-white">
+      Distribution des Matériels
+    </h3>
+  </div>
+
+  <div class="mb-2">
+    <div id="distributionMateriels">
+      <apx-chart
+        #chart
+        [series]="chartOptions.series"
+        [chart]="chartOptions.chart"
+        [labels]="chartOptions.labels"
+        [colors]="chartOptions.colors"
+        [plotOptions]="chartOptions.plotOptions"
+        [legend]="chartOptions.legend"
+        [dataLabels]="chartOptions.dataLabels"
+        [responsive]="chartOptions.responsive"
+        [noData]="chartOptions.noData"
+      >
+      </apx-chart>
+    </div>
+  </div>
