--- a/GMI-angular/src/app/dashboard/gmi/interventions-par-type/interventions-par-type.component.html
+++ b/GMI-angular/src/app/dashboard/gmi/interventions-par-type/interventions-par-type.component.html
@@ -1,11 +1,22 @@
-<div class="bg-white dark:bg-gray-800 rounded-lg shadow p-4">
-  <h2 class="text-lg font-semibold text-gray-700 dark:text-gray-200 mb-4">Interventions par Type</h2>
-  <apx-chart
-    [series]="chartOptions.series"
-    [chart]="chartOptions.chart"
-    [labels]="chartOptions.labels"
-    [title]="chartOptions.title"
-    [theme]="chartOptions.theme"
-    [legend]="chartOptions.legend">
-  </apx-chart>
-</div> 
+  <div>
+    <h3 class="text-xl font-semibold text-black dark:text-white">
+      Interventions par Type
+    </h3>
+  </div>
+
+  <div class="mb-2">
+    <div id="interventionsParType">
+      <apx-chart
+        #chart
+        [series]="chartOptions.series"
+        [chart]="chartOptions.chart"
+        [labels]="chartOptions.labels"
+        [colors]="chartOptions.colors"
+        [plotOptions]="chartOptions.plotOptions"
+        [legend]="chartOptions.legend"
+        [dataLabels]="chartOptions.dataLabels"
+        [responsive]="chartOptions.responsive"
+      >
+      </apx-chart>
+    </div>
+  </div>
