--- a/GMI-angular/src/app/dashboard/gmi/materiels-par-date/materiels-par-date.component.html
+++ b/GMI-angular/src/app/dashboard/gmi/materiels-par-date/materiels-par-date.component.html
@@ -1,12 +1,24 @@
-<div class="bg-white dark:bg-gray-800 rounded-lg shadow p-4">
-  <h2 class="text-lg font-semibold text-gray-700 dark:text-gray-200 mb-4">Matériels Ajoutés par Date</h2>
-  <apx-chart
-    [series]="chartOptions.series"
-    [chart]="chartOptions.chart"
-    [xaxis]="chartOptions.xaxis"
-    [yaxis]="chartOptions.yaxis"
-    [stroke]="chartOptions.stroke"
-    [title]="chartOptions.title"
-    [theme]="chartOptions.theme">
-  </apx-chart>
-</div> 
+  <div>
+    <h3 class="text-xl font-semibold text-black dark:text-white">
+      Matériels par Date
+    </h3>
+  </div>
+
+  <div class="mb-2">
+    <div id="materielsParDate">
+      <apx-chart
+        #chart
+        [series]="chartOptions.series"
+        [chart]="chartOptions.chart"
+        [xaxis]="chartOptions.xaxis"
+        [yaxis]="chartOptions.yaxis"
+        [dataLabels]="chartOptions.dataLabels"
+        [grid]="chartOptions.grid"
+        [stroke]="chartOptions.stroke"
+        [legend]="chartOptions.legend"
+        [responsive]="chartOptions.responsive"
+        [noData]="chartOptions.noData"
+      >
+      </apx-chart>
+    </div>
+  </div>
