--- a/GMI-angular/src/app/dashboard/gmi/metric-cards/metric-cards.component.html
+++ b/GMI-angular/src/app/dashboard/gmi/metric-cards/metric-cards.component.html
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4 p-4">
   <!-- Projets Effectués -->
   <div class="bg-white dark:bg-gray-800 rounded-lg shadow p-4">
     <div class="flex items-center">
