--- a/GMI-angular/src/app/dashboard/gmi/tendance-interventions/tendance-interventions.component.html
+++ b/GMI-angular/src/app/dashboard/gmi/tendance-interventions/tendance-interventions.component.html
@@ -1,12 +1,23 @@
-<div class="bg-white dark:bg-gray-800 rounded-lg shadow p-4">
-  <h2 class="text-lg font-semibold text-gray-700 dark:text-gray-200 mb-4">Tendance des Interventions</h2>
-  <apx-chart
-    [series]="chartOptions.series"
-    [chart]="chartOptions.chart"
-    [xaxis]="chartOptions.xaxis"
-    [yaxis]="chartOptions.yaxis"
-    [title]="chartOptions.title"
-    [theme]="chartOptions.theme"
-    [plotOptions]="chartOptions.plotOptions">
-  </apx-chart>
-</div> 
+<div>
+  <h3 class="text-xl font-semibold text-black dark:text-white">
+    Tendance des Interventions
+  </h3>
+</div>
+
+<div class="mb-2">
+  <div id="tendanceInterventions">
+    <apx-chart
+      #chart
+      [series]="chartOptions.series"
+      [chart]="chartOptions.chart"
+      [xaxis]="chartOptions.xaxis"
+      [yaxis]="chartOptions.yaxis"
+      [dataLabels]="chartOptions.dataLabels"
+      [grid]="chartOptions.grid"
+      [stroke]="chartOptions.stroke"
+      [legend]="chartOptions.legend"
+      [responsive]="chartOptions.responsive"
+    >
+    </apx-chart>
+  </div>
+</div>
